--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,12 @@
-<header class="header">
-    <h1 class="header__title">View our Featured Speakers for the Event</h1>
-    <p class="header__text">
+<header style="display: flex; flex-direction: column; align-items: center; gap: 1rem; width:90%; max-width: 50rem;
+                margin:0 auto 2rem auto; text-align: center; background: white; padding: 1rem; border-bottom-right-radius: 12px;
+                border-bottom-left-radius: 12px;">
+    <h1 style="font-size: 1.25rem; margin: 0; padding:0;">View our Featured Speakers for the Event</h1> 
+    <p style="margin: 0; font-size:0.8rem; overflow-wrap: break-word;">
         Speakers are core contributors and industry thought leaders working at 
-        <span class="header__text-highlight">companies</span> 
+        <span style="color: #0000FF;">companies</span> 
         that push for innovation
     </p> 
 </header>
+
+
